--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/movie"
+        android:icon="@drawable/logo_movie"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
