--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:allowBackup="true"
         android:icon="@drawable/movie"
         android:label="@string/app_name"
-
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
@@ -21,14 +20,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailsActivity" />
+        <activity android:name=".DetailsActivity" android:screenOrientation="portrait"/>
         <activity android:name=".TrailerActivity" />
         <activity android:name=".ReviewActivity" />
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:value="@integer/abc_max_action_buttons" />
     </application>
 
 </manifest>
